# dafughes.github.io

./: Cargo.toml  game.js  index.html  perftsuite.txt
pkg/: chess.d.ts  chess.js  chess_bg.wasm  chess_bg.wasm.d.ts
src/: bitboard.rs  board.rs  castling_rights.rs  color.rs  debug.rs  eval.rs  glue.rs  lib.rs  moves.rs  piece.rs  search.rs  square.rs
