[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.test]
opt-level = 3
debug = true
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[dependencies]
wasm-bindgen = "0.2"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
